--- a/styles/hg2e.css
+++ b/styles/hg2e.css
@@ -451,6 +451,13 @@
     margin: 2px 0;
 }
 
+.heavygear-roll .result-line-bad {
+    display: flex;
+    justify-content: space-between;
+    margin: 2px 0;
+    color: red;
+}
+
 .heavygear-roll .total-line {
     border-top: 1px solid #000;
     margin-top: 5px;
